packages/react-bootstrap/scss/style.scss
.selectoroid-control {
  .selectoroid-static {
    cursor: default;

    &.focus-ring {
      box-shadow: var(--bs-focus-ring-x, 0) var(--bs-focus-ring-y, 0) var(--bs-focus-ring-blur, 0)
        var(--bs-focus-ring-width) var(--bs-focus-ring-color);
    }
  }
}

.selectoroid-menu {
  width: 100%;
  height: 25em;
  overflow: hidden;

  .selectoroid-option-list {
    overflow-y: auto;
    margin-right: 1em; // reveals scroll bar
    height: 100%;

    margin-bottom: 1em;

    &:not(:last-child) {
      border-right: 1px solid $border-color;
    }

    .selectoroid-listgroup-wrapper {
      position: relative;
      height: 100%;

      .list-group-item {
        display: flex;

        .selectoroid-option-label {
          flex: 1;
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;

          .badge {
            align-self: center;
          }
        }
      }
    }

    .expanded {
      &:not(.active) {
        background-color: $list-group-hover-bg;
      }
    }

    .badge {
      margin-left: 1em;
    }
  }
}

